updating nav to sumutasib.com

--- a/aboynamedsu.html
+++ b/aboynamedsu.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Queer Kahani <span>by Sumu Tasib</span></a></div>
+				<div class="logo"><a href="index.html">sumutasib.com <span></span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -26,7 +26,7 @@
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Sumu Tasib</a></li>
+					<li><a href="sumutasib.html">Bio</a></li>
 					<li><a href="schedule.html">Schedule</a></li>
 				</ul>
 			</nav>
