--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 	<head>
-		<title>Queer Kahani - A Place for Queer Stories</title>
+		<title>Sumu Tasib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:image" content="https://queerkahani.com/images/queerkahani_preview_zoom.jpg" />
@@ -27,7 +27,8 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Queer Kahani <span>by Sumu Tasib</span></a></div>
+				<div class="logo"><a href="index.html">sumutasib.com <span></span></a></div>
+				<!-- <div class="logo"><a href="index.html">sumutasib.com <span>by Sumu Tasib</span></a></div> -->
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -38,8 +39,8 @@
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Sumu Tasib</a></li>
-					<li><a href="schedule.html">Schedule</a></li>		
+					<li><a href="sumutasib.html">Bio</a></li>
+					<li><a href="schedule.html">Schedule</a></li>
 				</ul>
 			</nav>
 
@@ -49,8 +50,8 @@
 					<img src="images/banner.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>a place for queer stories</p>
-							<h2>Queer Kahani</h2>
+							<p>author, poet, scientist</p>
+							<h2>Sumu Tasib</h2>
 						</header>
 					</div>
 				</article>
@@ -58,8 +59,8 @@
 					<img src="images/banner3.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>a place for queer stories</p>
-							<h2>Queer Kahani</h2>
+							<p>author, poet, scientist</p>
+							<h2>Sumu Tasib</h2>
 						</header>
 					</div>
 				</article>
@@ -67,8 +68,8 @@
 					<img src="images/banner2.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>a place for queer stories</p>
-							<h2>Queer Kahani</h2>
+							<p>author, poet, scientist</p>
+							<h2>Sumu Tasib</h2>
 						</header>
 					</div>
 				</article>
