--- a/schedule.html
+++ b/schedule.html
@@ -15,9 +15,10 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="index.html">Queer Kahani <span>by Sumu Tasib</span></a></div>
+				<div class="logo"><a href="index.html">sumutasib.com <span></span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
+
 
 		<!-- Nav -->
 			<nav id="menu">
@@ -26,7 +27,8 @@
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Sumu Tasib</a></li>
+					<li><a href="sumutasib.html">Bio</a></li>
+					<li><a href="schedule.html">Schedule</a></li>
 				</ul>
 			</nav>
 
@@ -55,6 +57,7 @@
                                     <li> <b>4/22/23, 1:30-2:15pm @ SEAF (Seattle)</b> - reading and discussion, "Opening the Curtain: When and How Should We Reveal Our Full Sexuality?" <a href="https://www.facebook.com/events/625743885628205">[facebook invite]</a></li>
                                     <li> <b>4/22/23, 5:00-6:15pm @ SEAF (Seattle)</b> - group reading with other SEAF 2023 Literary artists <a href="https://www.facebook.com/events/227464353212960">[facebook invite]</a></li>
                                     <li> <b>5/12/23, 7:00-8:00pm @ Jack Straw Cultural Center (Seattle)</b> - group reading with other Jack Straw 2023 writers <a href="https://www.facebook.com/events/1253761998591238">[facebook invite]</a></li>
+                                    <li> <b>5/28/23, 2:00-3:00pm @ NW Folklife Festival</b> - group reading with other Jack Straw 2023 writers <a href="https://www.facebook.com/events/593096609659060">[facebook invite]</a></li>
                                 </ul>
 
 							<h4>Contact</h4>
