--- a/stories.html
+++ b/stories.html
@@ -14,10 +14,11 @@
 	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="index.html">Queer Kahani <span>by Sumu Tasib</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
+		<header id="header">
+			<div class="logo"><a href="index.html">sumutasib.com <span></span></a></div>
+			<a href="#menu">Menu</a>
+		</header>
+
 
 		<!-- Nav -->
 			<nav id="menu">
@@ -26,7 +27,7 @@
 					<li><a href="podcast/index.html">Podcast</a></li>
 					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
 					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Sumu Tasib</a></li>
+					<li><a href="sumutasib.html">Bio</a></li>
 					<li><a href="schedule.html">Schedule</a></li>
 					</ul>
 			</nav>
