--- a/sumutasib.html
+++ b/sumutasib.html
@@ -14,22 +14,23 @@
 	<body class="subpage">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="index.html">Queer Kahani <span>by Sumu Tasib</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
+		<header id="header">
+			<div class="logo"><a href="index.html">sumutasib.com <span></span></a></div>
+			<a href="#menu">Menu</a>
+		</header>
+
 
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="podcast/index.html">Podcast</a></li>
-					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
-					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Sumu Tasib</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
-				</ul>
-			</nav>
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="podcast/index.html">Podcast</a></li>
+				<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
+				<li><a href="stories.html">Stories</a></li>
+				<li><a href="sumutasib.html">Bio</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+			</ul>
+		</nav>
 
 		<!-- One 
 			<section id="One" class="wrapper style3"  style="background-image: url(images/a_boy_named_su_book.jpg);">
@@ -60,10 +61,10 @@
 									They are currently working on a collection of <a href="stories.html">short stories</a>, the first of which, 
 									<a href="https://sumutasib.medium.com/through-the-walls-f0fc8076dc61">"Through the Walls,"</a> was selected for inclusion in the 
 									2022 Seattle Erotic Arts Festival (<a href="https://www.seattleerotic.org/meet-the-literary-artists-of-seaf2022/">SEAF</a>) and 
-									appears in the <a href="https://www.amazon.com/Seattle-Erotic-Festival-Literary-Anthology/dp/1435795873">SEAF Literary Art Anthology 2022</a>. 
-									Su is available for readings and talks/discussions on the gender spectrum; contact them directly for bookings. 
+									appears in the <a href="https://www.amazon.com/Seattle-Erotic-Festival-Literary-Anthology/dp/1435795873">SEAF Literary Art Anthology 2022</a>. Su's poetry 
+									has also been published in the <a href="https://www.amazon.com/Seattle-Erotic-Festival-Literary-Anthology/dp/131261269X">SEAF Literary Art Anthology 2023</a>, and received the 
+									<a href="https://www.seattleerotic.org/may-i-have-the-envelope-please-seafs-2023-award-winners/">2023 Literary Editor's Choice Award.</a>
 								</p>
-								
 								<p>
 									Su's book can be found at the 
 									<a href="https://www.elliottbaybook.com/">Elliott Bay Book Company</a> and at <a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">amazon.com</a>; 
@@ -76,6 +77,7 @@
 									Su can be reached via email (<a href="mailto:sumu.tasib@gmail.com">sumu.tasib@gmail.com</a>), 
 									facebook (<a href="https://www.facebook.com/sumu.tasib/">sumu.tasib</a>),
 									or instagram (<a href="https://www.instagram.com/sumu_tasib/">@sumu_tasib</a>).
+									Su is available for readings and talks/discussions on the gender spectrum; contact them directly for bookings. 
 								</p>
 						</div>
 					</div>
