rearranging tiles and adding template markers

--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 	</head>
 	<body>
 
-		<!-- Header -->
+		<!-- template-start:Header -->
 			<header id="header" class="alt">
 				<div class="logo"><a href="index.html">sumutasib.com <span></span></a></div>
 				<!-- <div class="logo"><a href="index.html">sumutasib.com <span>by Sumu Tasib</span></a></div> -->
 				<a href="#menu">Menu</a>
 			</header>
+		<!-- template-end:Header -->
 
-		<!-- Nav -->
+		<!-- template-start:Nav -->
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
@@ -43,6 +44,7 @@
 					<li><a href="schedule.html">Schedule</a></li>
 				</ul>
 			</nav>
+		<!-- template-end:Nav -->
 
 		<!-- Banner -->
 			<section class="banner full">
@@ -83,19 +85,18 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<!-- <img src="images/queerkahani_mainpage.jpg" alt="" /> -->
-									<img src="images/queer_kahani_podcast_banner.png" alt="" />
+									<img src="images/profile_white_bg_widescreen.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>a podcast of queer stories</p>
-										<h2>The Podcast: Queer Kahani</h2>
+										<p>bio and contact information</p>
+										<h2>The Author: Sumu Tasib</h2>
 									</header>
-									<p> A quirky, queer podcast of bite-sized stories - happy stories, sad stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
-										Episodes are available here as well as on Spotify and Apple Podcasts. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
+									<p>
+										More information about the author, Sumu (Su) Tasib, including current projects, where to find their work online and in stores, and contact information including social media. Please use this page for all press inquiries.
 									</p>
 									<footer class="align-center">
-										<a href="podcast/index.html" class="button alt">podcast</a>
+										<a href="sumutasib.html" class="button alt">bio</a>
 									</footer>
 								</div>
 							</div>
@@ -128,6 +129,27 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
+									<!-- <img src="images/queerkahani_mainpage.jpg" alt="" /> -->
+									<img src="images/queer_kahani_podcast_banner.png" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>a podcast of queer stories</p>
+										<h2>The Podcast: Queer Kahani</h2>
+									</header>
+									<p> A quirky, queer podcast of bite-sized stories - happy stories, sad stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
+										Episodes are available here as well as on Spotify and Apple Podcasts. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
+									</p>
+									<footer class="align-center">
+										<a href="podcast/index.html" class="button alt">podcast</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
+						<div>
+							<div class="box">
+								<div class="image fit">
 									<img src="images/bookstore_image.jpg" alt="" />
 								</div>
 								<div class="content">
@@ -140,26 +162,6 @@
 									</p>
 									<footer class="align-center">
 										<a href="schedule.html" class="button alt">schedule</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<img src="images/profile_white_bg_widescreen.jpg" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>bio and contact information</p>
-										<h2>The Author: Sumu Tasib</h2>
-									</header>
-									<p>
-										More information about the author, Sumu (Su) Tasib, including current projects, where to find their work online and in stores, and contact information including social media. Please use this page for all press inquiries.
-									</p>
-									<footer class="align-center">
-										<a href="sumutasib.html" class="button alt">bio</a>
 									</footer>
 								</div>
 							</div>
@@ -191,7 +193,7 @@
 			</section>
 
 
-		<!-- Footer -->
+		<!-- template-start:Footer -->
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
@@ -205,13 +207,15 @@
 					All images and text &copy; Sumu Tasib. HIELO site template by TEMPLATED.CO. All rights reserved.
 				</div>
 			</footer>
+		<!-- template-end:Footer -->
 
-		<!-- Scripts -->
+		<!-- template-start:Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+		<!-- template-end:Scripts -->
 
 	</body>
 </html>
