--- a/podcast/episodes/episode-4-clitaurus-chronicles.html
+++ b/podcast/episodes/episode-4-clitaurus-chronicles.html
@@ -13,8 +13,8 @@
 
   <!-- Style Sheets --> 
   <link rel="stylesheet" href="/podcast/css/main.css">
-  <link rel="canonical" href="https://queerkahani.com/podcast/episodes/episode-4-clitaurus-chronicles.html">
-  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="https://queerkahani.com/podcast/podcast.xml">
+  <link rel="canonical" href="https://sumutasib.com/podcast/episodes/episode-4-clitaurus-chronicles.html">
+  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="https://sumutasib.com/podcast/podcast.xml">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   
   <!-- Favicon -->
@@ -29,16 +29,16 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="https://queerkahani.com" />
+  <meta name="twitter:site" content="https://sumutasib.com" />
   <meta name="twitter:title" content="Episode 4: Clitaurus Chronicles" />
   <meta name="twitter:description" content="An interview with Breona Mendoza about her book, Clitaurus Chronicles (illustrated by Danny Tayara), and her work as a therapist, sex therapist, and sex educator." />
-  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" /> 
+  <meta name="twitter:image" content="https://sumutasib.com/podcast/images/itunes.png" /> 
   
   <!-- Facebook -->
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_logo.png" />
   <meta property="og:image:width" content="2000"/>
   <meta property="og:image:height" content="2000"/>
-  <meta property="og:url" content="https://queerkahani.com/podcast/episodes/episode-4-clitaurus-chronicles.html" />
+  <meta property="og:url" content="https://sumutasib.com/podcast/episodes/episode-4-clitaurus-chronicles.html" />
   <meta property="og:title" content="Episode 4: Clitaurus Chronicles" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="An interview with Breona Mendoza about her book, Clitaurus Chronicles (illustrated by Danny Tayara), and her work as a therapist, sex therapist, and sex educator." />
