--- a/podcast/index.html
+++ b/podcast/index.html
@@ -13,8 +13,8 @@
 
   <!-- Style Sheets --> 
   <link rel="stylesheet" href="/podcast/css/main.css">
-  <link rel="canonical" href="https://queerkahani.com/podcast/">
-  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="https://queerkahani.com/podcast/podcast.xml">
+  <link rel="canonical" href="https://sumutasib.com/podcast/">
+  <link rel="alternate" type="application/rss+xml" title="Queer Kahani" href="https://sumutasib.com/podcast/podcast.xml">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   
   <!-- Favicon -->
@@ -29,16 +29,16 @@
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="https://queerkahani.com" />
+  <meta name="twitter:site" content="https://sumutasib.com" />
   <meta name="twitter:title" content="Queer Kahani - The Podcast" />
   <meta name="twitter:description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com" />
-  <meta name="twitter:image" content="https://queerkahani.com/podcast/images/itunes.png" /> 
+  <meta name="twitter:image" content="https://sumutasib.com/podcast/images/itunes.png" /> 
   
   <!-- Facebook -->
   <meta property="og:image" content="https://queerkahani.com/podcast/images/queer_kahani_podcast_logo.png" />
   <meta property="og:image:width" content="2000"/>
   <meta property="og:image:height" content="2000"/>
-  <meta property="og:url" content="https://queerkahani.com/podcast/" />
+  <meta property="og:url" content="https://sumutasib.com/podcast/" />
   <meta property="og:title" content="Queer Kahani - The Podcast" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Queer Kahani is a quirky and curious podcast of bite-sized queer stories told in an interactive interview format - happy stories, sad stories, coming out stories, closing in stories, first loves, worst loves, epiphanies, recipes, and everything in between. Learn more at https://queerkahani.com" />
