adding comment about updating hash

--- a/stories/loremipsum.html
+++ b/stories/loremipsum.html
@@ -49,6 +49,7 @@
             <input type="password" id="storyPassword" placeholder="Enter your password">
             
             <!-- Add a button to close the dialog box -->
+            <!-- Copy hashcode into closePasswordDialog call below -->
             <p></p>
             <button style="margin: 10" onclick="closePasswordDialog(1451121645)">Enter</button>
         </div>
