updating hash function and values to have less information exposed in the hash

--- a/stories/eshkolit.html
+++ b/stories/eshkolit.html
@@ -50,7 +50,7 @@
             
             <!-- Add a button to close the dialog box -->
             <p></p>
-            <button style="margin: 10" onclick="closePasswordDialog(-27394210)">Enter</button>
+            <button style="margin: 10" onclick="closePasswordDialog(98)">Enter</button>
         </div>
         
 
