--- a/stories/loremipsum.html
+++ b/stories/loremipsum.html
@@ -51,7 +51,7 @@
             <!-- Add a button to close the dialog box -->
             <!-- Copy hashcode into closePasswordDialog call below -->
             <p></p>
-            <button style="margin: 10" onclick="closePasswordDialog(1451121645)">Enter</button>
+            <button style="margin: 10" onclick="closePasswordDialog(210)">Enter</button>
         </div>
         
 
