adding comment about how to make dialog box invisible for new page creation

--- a/stories/loremipsum.html
+++ b/stories/loremipsum.html
@@ -43,6 +43,7 @@
         -->
 
         <!-- Password dialog: a floating dialog box in the center of the screen -->
+        <!-- when making a new story, add style="display:none" -->
         <div class="dialog-box" id="storyPasswordDialog">
             <p id="passwordDialogText">Enter password to unlock content.</p>
             <!-- Add a field for entering a password -->
