--- a/sumutasib.html
+++ b/sumutasib.html
@@ -63,7 +63,9 @@
 									2022 Seattle Erotic Arts Festival (<a href="https://www.seattleerotic.org/meet-the-literary-artists-of-seaf2022/">SEAF</a>) and 
 									appears in the <a href="https://www.amazon.com/Seattle-Erotic-Festival-Literary-Anthology/dp/1435795873">SEAF Literary Art Anthology 2022</a>. Su's poetry 
 									has also been published in the <a href="https://www.amazon.com/Seattle-Erotic-Festival-Literary-Anthology/dp/131261269X">SEAF Literary Art Anthology 2023</a>, and received the 
-									<a href="https://www.seattleerotic.org/may-i-have-the-envelope-please-seafs-2023-award-winners/">2023 Literary Editor's Choice Award.</a>
+									<a href="https://www.seattleerotic.org/may-i-have-the-envelope-please-seafs-2023-award-winners/">2023 Literary Editor's Choice Award.</a> Su has also been invited to be a 
+									featured writer for SEAF 2024.
+
 								</p>
 								<p>
 									Su's book can be found at the 
@@ -71,6 +73,22 @@
 									selected chapters and other writings are also available on <a href="https://sumutasib.medium.com">Medium</a>. 
 									Su uses he/they pronouns.
                                 </p>
+
+							<h4>Interviews and Media</h4>
+								<p>
+									<ul>
+										<li>
+											An <a href="https://www.jackstraw.org/sound_clip/golden-threads-sumu-tasib/">interview with Priscilla Long</a> for the Jack Straw Writer's Program.
+										</li>
+										<li>
+											A <a href="https://www.facebook.com/watch/?v=1466054754223503">short clip</a> of the opening from my Jack Straw reading 
+										</li>	
+										<li>
+											The <a href="https://youtu.be/DaOMj9p4SJ8?t=174">full reading</a> of "What If," my entry in the 2023 Jack Straw Anthology.
+										</li>
+									</ul>
+								</p>
+
 
 							<h4>Contact</h4>
 								<p>
