added product URL for Elliott Bay

--- a/sumutasib.html
+++ b/sumutasib.html
@@ -70,7 +70,7 @@
 								</p>
 								<p>
 									Su's book can be found at the 
-									<a href="https://www.elliottbaybook.com/">Elliott Bay Book Company</a> and at <a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">amazon.com</a>; 
+									<a href="https://www.elliottbaybook.com/item/xK2SU28yQHxujWBg8jVQFQ">Elliott Bay Book Company</a> and at <a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">amazon.com</a>; 
 									selected chapters and other writings are also available on <a href="https://sumutasib.medium.com">Medium</a>. 
 									Su uses he/they pronouns.
                                 </p>
