adding Jack Straw author page

--- a/sumutasib.html
+++ b/sumutasib.html
@@ -82,6 +82,9 @@
 											An <a href="https://www.jackstraw.org/sound_clip/golden-threads-sumu-tasib/">interview with Priscilla Long</a> for the Jack Straw Writer's Program.
 										</li>
 										<li>
+											<a href="https://www.jackstraw.org/artist/sumu-tasib/">Author page</a> for Sumu Tasib at Jack Straw.
+										</li>
+										<li>
 											A <a href="https://www.facebook.com/watch/?v=1466054754223503">short clip</a> of the opening from my Jack Straw reading 
 										</li>	
 										<li>
