adding recent events

--- a/schedule.html
+++ b/schedule.html
@@ -58,6 +58,11 @@
                                     <li> <b>4/22/23, 5:00-6:15pm @ SEAF (Seattle)</b> - group reading with other SEAF 2023 Literary artists <a href="https://www.facebook.com/events/227464353212960">[facebook invite]</a></li>
                                     <li> <b>5/12/23, 7:00-8:00pm @ Jack Straw Cultural Center (Seattle)</b> - group reading with other Jack Straw 2023 writers <a href="https://www.facebook.com/events/1253761998591238">[facebook invite]</a></li>
                                     <li> <b>5/28/23, 2:00-3:00pm @ NW Folklife Festival</b> - group reading with other Jack Straw 2023 writers <a href="https://www.facebook.com/events/593096609659060">[facebook invite]</a></li>
+									<li> <b>8/9/23, 7:00-8:30pm @ Elliott Bay Books</b> - group reading with other Jack Straw 2023 writers <a href="https://www.facebook.com/events/1295176528054946">[facebook invite]</a></li>
+									<li> <b>8/9/23, 7:00-8:30pm @ SoulFood Coffeehouse</b> - group poetry reading with other Jack Straw 2023 writers <a href="https://www.facebook.com/events/896967465279081">[facebook invite]</a></li>
+									<li> <b>11/4/23, 2:00-3:30pm @ Seattle Public Library (downtown)</b> - group reading with other Jack Straw 2023 writers <a href="https://www.spl.org/programs-and-services/authors-and-books/authors-and-books-calendar?trumbaEmbed=view%3Devent%26eventid%3D169321141">[event listing]</a></li>
+									<li> <b>4/27/24, 1:15-2:00pm @ SEAF (Seattle) </b> - reading/discussion, "Tell Me (Tiny) Stories of Consent" <a href="https://www.seattleerotic.org/the-sexiest-of-words-just-for-you/">[event listing]</a></li>
+									<li> <b>4/27/24, 6:30-7:00pm @ SEAF (Seattle) </b> - group reading with other SEAF 2024 Literary artists <a href="https://www.seattleerotic.org/the-sexiest-of-words-just-for-you/">[event listing]</a></li>
                                 </ul>
 
 							<h4>Contact</h4>
