updating nav and order of sections

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="podcast/index.html">Podcast</a></li>
-					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
-					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Bio</a></li>
+					<li><a href="sumutasib.html">Bio / Contact</a></li>
+					<li><a href="stories.html">Writings</a></li>
 					<li><a href="schedule.html">Schedule</a></li>
+					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
+					<li><a href="podcast/index.html">Podcast</a></li>
 				</ul>
 			</nav>
 		<!-- template-end:Nav -->
@@ -101,47 +101,24 @@
 								</div>
 							</div>
 						</div>
-
+						
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/a_boy_named_su_book.jpg" alt="" />
+									<img src="images/kindred_spirits_crop.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>stories from a journey into genderqueerness</p>
-										<h2>The Book: A Boy Named Su</h2>
+										<p>stories, poetry, and essays</p>
+										<h2>Writings</h2>
 									</header>
-									<p> A genderqueer journey through a gender-binary world, A Boy Named Su traces the footsteps of the author's confusion, shame, and eventual embrace of his sexuality and gender identity.
-										Now available at 
-										<a href="https://www.elliottbaybook.com/book/9798571858229">Elliott Bay Books</a>, 
-										<a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">Amazon</a>, 
-										<a href="https://medium.com/a-boy-named-su">Medium</a> (free), and 
-										<a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su">goodreads</a>.
+									<p>Short works of fiction on themes of gender, sexuality, relationships, and social justice. Featuring "Through the Walls," a short story accepted for inclusion in the 2022 Seattle Erotic
+										Arts Festival (<a href="https://www.seattleerotic.org">SEAF</a>).
+										Sculpture credit: "Kindred Spirits" by 
+										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
 									</p>
 									<footer class="align-center">
-										<a href="aboynamedsu.html" class="button alt">book</a>
-									</footer>
-								</div>
-							</div>
-						</div>
-
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<!-- <img src="images/queerkahani_mainpage.jpg" alt="" /> -->
-									<img src="images/queer_kahani_podcast_banner.png" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>a podcast of queer stories</p>
-										<h2>The Podcast: Queer Kahani</h2>
-									</header>
-									<p> A quirky, queer podcast of bite-sized stories - happy stories, sad stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
-										Episodes are available here as well as on Spotify and Apple Podcasts. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
-									</p>
-									<footer class="align-center">
-										<a href="podcast/index.html" class="button alt">podcast</a>
+										<a href="stories.html" class="button alt">stories</a>
 									</footer>
 								</div>
 							</div>
@@ -170,24 +147,48 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/kindred_spirits_crop.jpg" alt="" />
+									<img src="images/a_boy_named_su_book.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>assorted works of fiction</p>
-										<h2>Stories</h2>
+										<p>stories from a journey into genderqueerness</p>
+										<h2>Book: A Boy Named Su</h2>
 									</header>
-									<p>Short works of fiction on themes of gender, sexuality, relationships, and social justice. Featuring "Through the Walls," a short story accepted for inclusion in the 2022 Seattle Erotic
-										Arts Festival (<a href="https://www.seattleerotic.org">SEAF</a>).
-										Sculpture credit: "Kindred Spirits" by 
-										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
+									<p> A genderqueer journey through a gender-binary world, A Boy Named Su traces the footsteps of the author's confusion, shame, and eventual embrace of his sexuality and gender identity.
+										Now available at 
+										<a href="https://www.elliottbaybook.com/book/9798571858229">Elliott Bay Books</a>, 
+										<a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">Amazon</a>, 
+										<a href="https://medium.com/a-boy-named-su">Medium</a> (free), and 
+										<a href="https://www.goodreads.com/book/show/56063681-a-boy-named-su">goodreads</a>.
 									</p>
 									<footer class="align-center">
-										<a href="stories.html" class="button alt">stories</a>
+										<a href="aboynamedsu.html" class="button alt">book</a>
 									</footer>
 								</div>
 							</div>
 						</div>
+
+						<div>
+							<div class="box">
+								<div class="image fit">
+									<!-- <img src="images/queerkahani_mainpage.jpg" alt="" /> -->
+									<img src="images/queer_kahani_podcast_banner.png" alt="" />
+								</div>
+								<div class="content">
+									<header class="align-center">
+										<p>conversations about queer stories</p>
+										<h2>Podcast: Queer Kahani</h2>
+									</header>
+									<p> A quirky, queer podcast of bite-sized stories - happy stories, sad stories, first loves, worst loves, epiphanies, recipes, and everything in between. 
+										Episodes are available here as well as on Spotify and Apple Podcasts. Story submissions and feedback are welcome by <a href="mailto:sumu.tasib@gmail.com">email</a>.
+									</p>
+									<footer class="align-center">
+										<a href="podcast/index.html" class="button alt">podcast</a>
+									</footer>
+								</div>
+							</div>
+						</div>
+
 
 				</div>
 			</section>
