adding new stories, poems, and links

--- a/stories.html
+++ b/stories.html
@@ -20,17 +20,19 @@
 		</header>
 
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="podcast/index.html">Podcast</a></li>
-					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
-					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Bio</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
-					</ul>
-			</nav>
+		<!-- template-start:Nav -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="sumutasib.html">Bio / Contact</a></li>
+				<li><a href="stories.html">Writings</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
+				<li><a href="podcast/index.html">Podcast</a></li>
+			</ul>
+		</nav>
+		<!-- template-end:Nav -->
+
 
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
@@ -38,32 +40,42 @@
 					<div class="box">
 						<div class="content">
 							<header class="align-center">
-								<h2>Stories</h2>
+								<h2>Writings</h2>
                                 <img src="images/kindred_spirits_crop.jpg" width="50%">
                                 <h2 />
 							</header>
-                            <h4>About the Stories</h4>
+                            <h4>About the Work</h4>
                                 <p>
                                     While essays, lectures, and arguments about sensitive topics tend 
 									to force us ever deeper into our existing points of view, I've always felt stories have the power to do the opposite. 
 									Once we are drawn into a set of characters and their challenges we begin to have real empathy for them, reaching a place of softness from which it becomes possible
 									to learn about an alternative view, shift our own perspectives, or even change our minds.
-									With these short works of fiction I'm hoping to bring my readers new perspectives on gender, sexuality, relationships, and social justice. 
+									With these stories, poems, and essays, I'm hoping to bring my readers new perspectives on gender, sexuality, relationships, and social justice. 
                                 </p>
 
-							<h4>Available Stories</h4>
+							<h4>Stories</h4>
 							<p> 
 								<ul style="margin-left: 5%">
+								<li><a href="stories/patterns.html">Patterns</a> - a mother's heartwarming support of her trans daughter (password available on request).</li>
+								<li><a href="stories/whatif.html">What If</a> - a story about the unexpected benefits of anxiety, from the <a href="https://open-books-a-poem-emporium.myshopify.com/products/long-priscilla-cur-jack-straw-writers-anthology-2023">
+										Jack Straw Writers Anthology 2023</a>.</li>
+								<li><a href="stories/petrichor.html">Petrichor*</a> - imagining the dynamics of attraction when it is based primarily on scent (password available on request).</li>
 								<li><a href="https://sumutasib.medium.com/through-the-walls-f0fc8076dc61">Through the Walls*</a> - a tale of unexpected pandemic romance, selected for inclusion in the <a href="https://seattleerotic.org/the-festival">2022 Seattle Erotic Arts Festival</a>
 									<!--and also appears in the 
 									<a href="https://www.lulu.com/en/us/shop/claire-dietrich/seattle-erotic-art-festival-literary-art-anthology-2022/paperback/product-d27wv5.html?page=1&pageSize=4">Seattle Erotic Art Festival Literary Art Anthology 2022.</a></li>
-									--> 
+								--> 
 								<li><a href="https://sumutasib.medium.com/the-mermaid-of-shi-shi-beach-6ba564a19b89">The Mermaid of Shi Shi Beach</a> - a (very) short story inspired by Lori Evans' painting by the same name at the 2022 Seattle Erotic Arts Festival.</li>
 								</ul>
 							</p>
 							<p><i>
-								content warning: Some of these stories (marked with a *) contain graphic descriptions of intimate situations; please read with caution if you are sensitive to such material.                                
+								content warning: Some of these stories (marked with a *) contain graphic descriptions of intimate situations; please proceed with caution if you are sensitive to such material.                                
 							</i></p>
+							<h4>Poems</h4>
+							<p> 
+								<ul style="margin-left: 5%">
+								<li><a href="https://www.4culture.org/poem/bus-stop/">Bus Stop</a>, selected for 4Culture's <a href="https://www.4culture.org/poetry/">Poetry in Public: Places of Landing</a> project</li>
+								</ul>
+							</p>
 						<h4>About the Author</h4>
 							<p>
 								See <a href="sumutasib.html">Sumu Tasib's bio</a> to learn more about the author and how to contact them.
