--- a/schedule.html
+++ b/schedule.html
@@ -20,17 +20,18 @@
 			</header>
 
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="podcast/index.html">Podcast</a></li>
-					<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
-					<li><a href="stories.html">Stories</a></li>
-					<li><a href="sumutasib.html">Bio</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
-				</ul>
-			</nav>
+		<!-- template-start:Nav -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="sumutasib.html">Bio / Contact</a></li>
+				<li><a href="stories.html">Writings</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="aboynamedsu.html">A Boy Named Su</a></li>
+				<li><a href="podcast/index.html">Podcast</a></li>
+			</ul>
+		</nav>
+		<!-- template-end:Nav -->
 
 		<!-- One 
 			<section id="One" class="wrapper style3"  style="background-image: url(images/a_boy_named_su_book.jpg);">
