minor formatting/text updates

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 										<p>stories, poetry, and essays</p>
 										<h2>Writings</h2>
 									</header>
-									<p>Short works of fiction on themes of gender, sexuality, relationships, and social justice. Featuring "Through the Walls," a short story accepted for inclusion in the 2022 Seattle Erotic
-										Arts Festival (<a href="https://www.seattleerotic.org">SEAF</a>).
+									<p>Stories, poetry, and essays on themes of gender, sexuality, relationships, and social justice. Sumu's work has been published in various literary magazines and anthologies.
 										Sculpture credit: "Kindred Spirits" by 
 										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
 									</p>
@@ -154,8 +153,8 @@
 										<p>stories from a journey into genderqueerness</p>
 										<h2>Book: A Boy Named Su</h2>
 									</header>
-									<p> A genderqueer journey through a gender-binary world, A Boy Named Su traces the footsteps of the author's confusion, shame, and eventual embrace of his sexuality and gender identity.
-										Now available at 
+									<p> A genderqueer journey through a gender-binary world, this book traces the footsteps of the author's confusion, shame, and eventual embrace of his sexuality and gender identity.
+										Available 
 										<a href="https://www.elliottbaybook.com/book/9798571858229">Elliott Bay Books</a>, 
 										<a href="https://www.amazon.com/Boy-Named-Stories-Journey-Genderqueerness/dp/B08P1KLT19">Amazon</a>, 
 										<a href="https://medium.com/a-boy-named-su">Medium</a> (free), and 
