updating link to Bayu's art

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									</header>
 									<p>Stories, poetry, and essays on themes of gender, sexuality, relationships, and social justice. Sumu's work has been published in various literary magazines and anthologies.
 										Sculpture credit: "Kindred Spirits" by 
-										<a href="https://www.bayutopia.com/about">Bayu Angermeyer</a>.
+										<a href="https://www.instagram.com/bayutopia/">Bayu Angermeyer</a>.
 									</p>
 									<footer class="align-center">
 										<a href="stories.html" class="button alt">stories</a>
